﻿1.1.6
* Changed the version treatment so time "seed" generated each time assembly compiled - to prevent problems when installing with same verson different build
* Fixed the issue when elements of type Ignore (e.g. license.xhtml) were added to guide


1.1.5
+ Added styling for <de> element for compatibility with some older readers/browsers
+ Added support for generation of Calibre metadata - used for some sorts, series etc.
+ Added new command line parameter "calibremeta:[0/1]" to enable/disable Calibre metadata generation
+ Added new configuration setting "AddCalibreMetadata" to settings file to enable/disable Calibre metadata generation
+ Added Fb2ePub Converter as book producer
+ Added 2 new style classes for Title page "title_series" for series on title page and "title_authors" for authors on title page
+ Added display log function to GUI utility
+ Added display of settings file and log folder to the GUI utility About dialog
+ Added a new "/LOG<file_path>" parameter to command line utility in order to redirect logging, can accept either file path or folder
* Changed to generate truly Flat ePubs 
* Refactoring of the code to perform automatic internal relative paths resolving when constructing ePubs , instead of hard coded
* Replaced <strike> element with <del> element for better XHTML compatibility
* Fixed the bug with XGPT path not loaded in settings GUI
* Fixed shell extension converter sometimes does not convert all files when many files selected (COM interface marshaling between threads problem)
* Changed the left margin in default CSS to match right margin (8pt)
* Changed the installed to install VC++ libraries only if both English and localized versions not present 
* Changed manifest creation to omit of namespace as some readers (librusec) "did not liked it"


1.1.4
+ Added installer code to support configurations with and without embedding fonts